確認フェーズ（4.5）の修正完了